--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/be0d508cf4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Robert's CV</title>
 </head>
 
 <body>
 
     <header>
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo">
+            </a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Robert Tiffert</h1>
+                        <h2 class="title">Executive Assistant to C.E.O. / Junior Full-Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
@@ -21,7 +34,7 @@
     </section>
 
     <footer>
-        
+
     </footer>
 
 </body>
