--- a/resume.html
+++ b/resume.html
@@ -50,18 +50,11 @@
                 </div>
             </div>
         </div>
+
     </header>
 
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section>
+
     </section>
 
     <footer class="container-fluid">
@@ -101,6 +94,7 @@
                 </ul>
             </div>
         </div>
+
     </footer>
 
 </body>
