Add work history to resume.html and style CSS

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
@@ -55,10 +54,24 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
+                    </div>
+                    <div class="history-items">
+                        <div class="timeline-item" data-dates="07/2016 - 06/2024">
+                            <h4>Trudies Catering Kitchen</h4>
+                            <p>Executive Assistant to the Chief Executive Officer</p>
+                        </div>
+                        <div class="timeline-item" data-dates="02/2014 - 02/2014">
+                            <h4>One Complete Solution Dublin Airport</h4>
+                            <p>Attendant Assistant for PRM</p>
+                        </div>
+                        <div class="timeline-item" data-dates="09/2010 - 06/2013">
+                            <h4>Tuck Shop</h4>
+                            <p>Assistant Manager</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,7 +193,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
