--- a/interests.html
+++ b/interests.html
@@ -203,8 +203,8 @@
     <script
         src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap">
+    <script src="assets/js/api-key.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=${MAPS_API_KEY}&callback=initMap">
     </script>
     <script src="assets/js/maps.js"></script>
 
