--- a/interests.html
+++ b/interests.html
@@ -72,7 +72,8 @@
                         </h3>
                     </div>
                 </div>
-                <div id="map"></div>
+                <div id="map">
+                </div>
             </div>
             <div class="col-md-8 bg-color-groups">
                 <div class="row">
@@ -203,8 +204,8 @@
     <script
         src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-    <script src="assets/js/api-key.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=${MAPS_API_KEY}&callback=initMap">
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap">
     </script>
     <script src="assets/js/maps.js"></script>
 
